--- a/Views/addCoding.ejs
+++ b/Views/addCoding.ejs
@@ -18,11 +18,11 @@
                 <textarea name="body" id="body" class="form-control"></textarea>
             </div>
             <div class="mb-3">
-                <label for="codeFile" class="form-label">Code File</label>
+                <label for="codeFile" class="form-label">Code File(PDF)</label>
                 <input type="file" class="form-control" id="codeFile" name="codeFile">
             </div>
             <div class="mb-3">
-                <label for="coverImage" class="form-label">Cover Image</label>
+                <label for="coverImage" class="form-label">Cover Image(Optional)</label>
                 <input type="file" class="form-control" id="coverImage" name="coverImage">
             </div>
             <button type="submit" class="btn btn-primary">Create Post</button>
