--- a/Views/addPainting.ejs
+++ b/Views/addPainting.ejs
@@ -18,8 +18,8 @@
                 <textarea name="body" id="body" class="form-control"></textarea>
             </div>
             <div class="mb-3">
-                <label for="coverImage" class="form-label">Cover Image</label>
-                <input type="file" class="form-control" id="coverImage" name="coverImage">
+                <label for="coverImage" class="form-label">Painting</label>
+                <input type="file" class="form-control" id="coverImage" name="coverImage" required/>
             </div>
             <button type="submit" class="btn btn-primary">Create Post</button>
         </form>
