--- a/Views/addSong.ejs
+++ b/Views/addSong.ejs
@@ -22,7 +22,7 @@
         <input type="file" class="form-control" id="videoFile" name="videoFile">
       </div>
       <div class="mb-3">
-        <label for="coverImage" class="form-label">Cover Image</label>
+        <label for="coverImage" class="form-label">Cover Image(Optional)</label>
         <input type="file" class="form-control" id="coverImage" name="coverImage">
       </div>
       <button type="submit" class="btn btn-primary">Create Song Post</button>
