--- a/Views/profile.ejs
+++ b/Views/profile.ejs
@@ -35,6 +35,7 @@
                     <div class="card-body">
                       <h5 class="card-title"><%= item.title %></h5>
                       <a href="/<%= section.type %>/<%= item._id %>" class="btn btn-primary">View</a>
+                      <a href="/<%= section.type %>/delete/<%= item._id %>" class="btn btn-primary">Delete</a>
                     </div>
                   </div>
                 </div>
