--- a/Views/signUp.ejs
+++ b/Views/signUp.ejs
@@ -57,6 +57,7 @@
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" id="exampleInputPassword1">
+                    <div id="password" class="form-text">Save it now, you won’t be able to change it later</div>
                 </div>
                 <div class="mb-3">
                     <label for="profileImage" class="form-label">Profile Image</label>
