--- a/Views/addCoding.ejs
+++ b/Views/addCoding.ejs
@@ -19,7 +19,7 @@
             </div>
             <div class="mb-3">
                 <label for="codeFile" class="form-label">Code File(PDF)</label>
-                <input type="file" class="form-control" id="codeFile" name="codeFile">
+                <input type="file" class="form-control" id="codeFile" name="codeFile" accept=".pdf">
             </div>
             <div class="mb-3">
                 <label for="coverImage" class="form-label">Cover Image(Optional)</label>
