--- a/Views/coding.ejs
+++ b/Views/coding.ejs
@@ -15,7 +15,7 @@
 
       <!-- 📁 Code File Download -->
       <p><strong>Code File:</strong>
-        <a href="<%= coding.codeFile %>" target="_blank">Download Code</a>
+        <a href="/code/download/<%= coding._id %>" target="_blank">Download Code</a>
       </p>
 
       <!-- 📝 Description -->
