--- a/Views/coding.ejs
+++ b/Views/coding.ejs
@@ -38,7 +38,7 @@
     <!-- 👤 Author Info -->
     <div class="mt-4 d-flex align-items-center gap-2">
       <img src="<%= coding.createdBy.profileImageURL %>" width="25px" style="border-radius: 20px;">
-      <%= coding.createdBy.fullName %>
+      <strong><%= coding.createdBy.fullName %></strong>
     </div>
 
     <!-- 📄 PDF Preview -->
