--- a/Views/dance.ejs
+++ b/Views/dance.ejs
@@ -39,7 +39,7 @@
     <!-- 👤 Creator Info -->
     <div class="mt-4 d-flex align-items-center gap-2">
       <img src="<%= dance.createdBy.profileImageURL %>" width="25px" style="border-radius: 20px;">
-      <%= dance.createdBy.fullName %>
+      <strong><%= dance.createdBy.fullName %></strong>
     </div>
 
     <!-- 😍 Reactions -->
