--- a/Views/painting.ejs
+++ b/Views/painting.ejs
@@ -36,7 +36,7 @@
     <!-- 👤 Creator Info -->
     <div class="mt-4 d-flex align-items-center gap-2">
       <img src="<%= painting.createdBy.profileImageURL %>" width="25px" style="border-radius: 20px;">
-      <%= painting.createdBy.fullName %>
+      <strong><%= painting.createdBy.fullName %></strong>
     </div>
 
     <!-- 😍 Reactions -->
