--- a/Views/photo.ejs
+++ b/Views/photo.ejs
@@ -35,7 +35,7 @@
     <!-- 👤 Creator Info -->
     <div class="mt-4 d-flex align-items-center gap-2">
       <img src="<%= photo.createdBy.profileImageURL %>" width="25px" style="border-radius: 20px;">
-      <%= photo.createdBy.fullName %>
+      <strong><%= photo.createdBy.fullName %></strong>
     </div>
 
     <!-- 😍 Reactions -->
