--- a/Views/Partials/nav.ejs
+++ b/Views/Partials/nav.ejs
@@ -2,57 +2,91 @@
   <div class="container-fluid">
     <a class="navbar-brand d-flex align-items-center" href="/">
       <img src="https://cdn.openart.ai/uploads/image_nhWjXBp1_1728552718272_raw.jpg" 
-      width="30" height="30" style="border-radius: 50%; margin-right: 8px;">
+        width="30" height="30" style="border-radius: 50%; margin-right: 8px;">
       HobbyHub
     </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
+
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+
         <% if (locals.user) { %>
-         <% if (Array.isArray(locals.user.interestedFields)) { %>
-          <% if (locals.user.interestedFields.includes("SINGING") || locals.user.interestedFields.includes("ALL")) { %>
-            <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/song/add">Add Song</a></li>
+          <% if (Array.isArray(locals.user.interestedFields)) { %>
+
+            <% if (locals.user.interestedFields.includes("SINGING") || locals.user.interestedFields.includes("ALL")) { %>
+              <li class="nav-item" style="margin-left: 12px">
+                <a class="nav-link" href="/song/add">Add Song</a>
+              </li>
             <% } %>
-          <% if (locals.user.interestedFields.includes("DANCING") || locals.user.interestedFields.includes("ALL")) { %>
-            <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/dance/add">Add Dance</a></li>
+
+            <% if (locals.user.interestedFields.includes("DANCING") || locals.user.interestedFields.includes("ALL")) { %>
+              <li class="nav-item" style="margin-left: 12px">
+                <a class="nav-link" href="/dance/add">Add Dance</a>
+              </li>
             <% } %>
-          <% if (locals.user.interestedFields.includes("DRAWING") || locals.user.interestedFields.includes("ALL")) { %>
-            <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/painting/add">Add Painting</a></li>
+
+            <% if (locals.user.interestedFields.includes("DRAWING") || locals.user.interestedFields.includes("ALL")) { %>
+              <li class="nav-item" style="margin-left: 12px">
+                <a class="nav-link" href="/painting/add">Add Painting</a>
+              </li>
             <% } %>
-          <% if (locals.user.interestedFields.includes("CODING") || locals.user.interestedFields.includes("ALL")) { %>
-            <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/code/add">Add Code</a></li>
+
+            <% if (locals.user.interestedFields.includes("GAMING") || locals.user.interestedFields.includes("ALL")) { %>
+              <li class="nav-item" style="margin-left: 12px">
+                <a class="nav-link" href="/game/add">Add Gaming</a>
+              </li>
             <% } %>
-          <% if (locals.user.interestedFields.includes("PHOTOGRAPHY") || locals.user.interestedFields.includes("ALL")) { %>
-            <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/photo/add">Add Photo</a></li>
+
+            <% if (locals.user.interestedFields.includes("CODING") || locals.user.interestedFields.includes("ALL")) { %>
+              <li class="nav-item" style="margin-left: 12px">
+                <a class="nav-link" href="/code/add">Add Code</a>
+              </li>
             <% } %>
-         <% } %>
+
+            <% if (locals.user.interestedFields.includes("PHOTOGRAPHY") || locals.user.interestedFields.includes("ALL")) { %>
+              <li class="nav-item" style="margin-left: 12px">
+                <a class="nav-link" href="/photo/add">Add Photo</a>
+              </li>
+            <% } %>
+
+          <% } %>
+
+          <!-- 👤 Profile Dropdown -->
           <li class="nav-item dropdown" style="margin-left: 15px">
-             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <img src="<%= user.profileImageURL %>" width="25px" style="border-radius: 20px;">
               <%= user.fullName.split(' ')[0] %>
-             </a>
-             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
-                <li><a class="dropdown-item" href="/user/logout">LogOut</a></li>
-             </ul>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
+              <li><a class="dropdown-item" href="/user/logout">LogOut</a></li>
+            </ul>
           </li>
+
         <% } else { %>
-          <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/user/signin">SignIn</a></li>
-          <li class="nav-item" style="margin-left: 15px"><a class="nav-link" href="/user/signup">SignUp</a></li>
+          <li class="nav-item" style="margin-left: 15px">
+            <a class="nav-link" href="/user/signin">SignIn</a>
+          </li>
+          <li class="nav-item" style="margin-left: 15px">
+            <a class="nav-link" href="/user/signup">SignUp</a>
+          </li>
         <% } %>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- 🚨 Error Alert -->
 <% if (locals.error) { %>
-  <div class="alert alert-danger" role="alert">
+  <div class="alert alert-danger mt-2" role="alert">
     <%= locals.error %>
   </div>
-  <% } %>
+<% } %>
