--- a/Views/Partials/head.ejs
+++ b/Views/Partials/head.ejs
@@ -1,12 +1,12 @@
-<link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
 <style>
       body {
-         background-color: rgb(98, 240, 221);
+            background-color: rgb(47, 51, 51);
+      }
+
+      .homePage {
+            padding-left: 1.2cm;
       }
 </style>
 <meta charset="UTF-8">
