--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -9,7 +9,7 @@
 <body>
   <%- include("./Partials/nav") %>
 
-    <div class="homePage">
+    <div class="page">
       <div class="container">
         <% const sections=[ { title: "Songs" , items: songs, type: "song" }, { title: "Dance" , items: dances,
           type: "dance" }, { title: "Paintings" , items: paintings, type: "painting" }, { title: "Games" , items: games,
