--- a/Views/Partials/head.ejs
+++ b/Views/Partials/head.ejs
@@ -3,10 +3,11 @@
 <style>
       body {
             background-color: rgb(47, 51, 51);
+            color: white;
       }
 
-      .homePage {
-            padding-left: 1.2cm;
+      .page {
+            padding-left: 1.1cm;
       }
 </style>
 <meta charset="UTF-8">
